--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -142,7 +142,7 @@ html(class="no-js", lang="")
 
       script(src="lib/bootstrap.min.js")
       script(src="js/pieChart.js")
-      script(src="https://d3js.org/d3.v4.min.js")
+      script(src="lib/d4.min.js")
       script(src="js/barChart.js")
       script(src="js/MutiBarChart.js")
       script(src="js/tablecolor.js")
