--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -86,9 +86,8 @@ body{
   border-bottom: 10px solid #fff;
 }
 .container1{
-  width: 80%;
-  height: 600px;
   margin: 0 auto;
+  max-width: 62%;
 }
 .nav_tabs{
   list-style: none;
@@ -140,6 +139,15 @@ body{
   padding: 2% 7% 10% 7%;
   width: 1000px;
   height: 500px;
+  overflow: hidden;
+}
+.table_contain2{
+  background-color: white;
+  margin-top: 30px;
+  margin-left: 75px;
+  padding: 2% 7% 10% 7%;
+  width: 1000px;
+  height: 400px;
 }
 #svg_contain{
   margin: 0 auto;
@@ -176,4 +184,12 @@ body{
 .twoChart{
   width: 1000px;
   height: 600px;
+}
+.contain_title{
+  width: 100%;
+  height: 40px;
+  color: #666;
+  font-size: 16px;
+  padding: 5px 0 0 20px;
+  border-bottom: 1px solid #dddddd;
 }
