--- a/src/public/css/tablestyle.css
+++ b/src/public/css/tablestyle.css
@@ -5141,9 +5141,7 @@ body.modal-open,
   border-radius: 3px;
   position: relative;
   -webkit-border-radius: 3px;
-  border-left: 1px solid #efefef;
-  border-right: 1px solid #efefef;
-  border-bottom: 1px solid #e2e2e2;
+  border: 1px solid #efefef;
   box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.04);
   transition: padding 500ms;
   -moz-transition: padding 500ms;
