换掉了第一个图，上传了接口文档，详情见github项目主页

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -57,7 +57,7 @@ html(class="no-js", lang="")
               option(value="2012") 2014
               option(value="2012") 2015
               option(value="2012") 2016
-          canvas#myBarChart
+          #myBarChart
         div(class='canvas_contain2 col-lg-10',id='Dchart')
           .contain_title
             span 品牌占比情况
@@ -146,17 +146,16 @@ html(class="no-js", lang="")
       script(src="lib/bootstrap.min.js")
       script(src="js/pieChart.js")
       script(src="lib/d4.min.js")
-      script(src="js/barChart.js")
       script(src="js/MutiBarChart.js")
       script(src="js/tablecolor.js")
       script(src="lib/jquery.jeditable.mini.js")
       script(src="lib/jquery.datatables.min.js")
       script(src="lib/datatables.js")
       script(src="js/datatable.js")
-
       script(src="js/dynamic.js")
       script(src="js/click.js")
       script(src="lib/highcharts.js")
+      script(src="js/barChart.js")
       script(src="js/percentagepile.js")
 
 
