--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -202,7 +202,7 @@ body{
   padding: 5px 0 0 20px;
   border-bottom: 1px solid #dddddd;
 }
-.contain_group2,.contain_group3,.contain_group4{
+.contain_group1,.contain_group2,.contain_group3,.contain_group4{
   float:right !important;
   width: 90%;
 }
