--- a/src/public/css/MutiBarChart.css
+++ b/src/public/css/MutiBarChart.css
@@ -1,7 +1,7 @@
 form {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   position: absolute;
-  margin-left: 10px;
+  padding-left: 150px;
   margin-top: 10px;
 }
 
