排行版加到12个（学妹的功劳）

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -206,24 +206,30 @@ html(class="no-js", lang="")
             .sales_ranking1
               h4 Rinking
               #skills
-                progress(value="70" max="100")
+                progress(value="100" max="100")
                 span 1.HTML/HTML5
-                progress(value="95" max="100")
+                progress(value="85" max="100")
                 span 2.CSS/CSS3
-                progress(value="85" max="100")
+                progress(value="75" max="100")
                 span 3.Photoshop / IlLustrator
-                progress(value="85" max="100")
+                progress(value="65" max="100")
                 span 4.Photoshop / IlLustrator
-                progress(value="70" max="100")
+                progress(value="52" max="100")
                 span 5.HTML/HTML5
-                progress(value="60" max="100")
+                progress(value="44" max="100")
                 span 6.HTML/HTML5
-                progress(value="60" max="100")
+                progress(value="33" max="100")
                 span 7.HTML/HTML5
-                progress(value="60" max="100")
+                progress(value="22" max="100")
                 span 8.HTML/HTML5
-                progress(value="70" max="100")
+                progress(value="20" max="100")
                 span 9.HTML/HTML5
+                progress(value="13" max="100")
+                span 10.IlLustrator
+                progress(value="6" max="100")
+                span 11.CSS/CSS3
+                progress(value="4" max="100")
+                span 12.Photoshop
     script(src="lib/timejquery.js")
     script(src="js/index.js")
     script(src="lib/echarts-all-3.js")
